@alexnaish add a min-width to notifications to stop them completely collapsing at low res

--- a/sass/modules/_notification.scss
+++ b/sass/modules/_notification.scss
@@ -47,6 +47,7 @@
 	overflow: hidden;
 	white-space: nowrap;
 	margin: 5px 0;
+	min-width: 300px;
 
 	.icon {
 		display: flex;
